updted for responsive web

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Developer Landing Page</title>
+    <title>Hosting Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -59,7 +59,7 @@
         </div>
     </div>
     <div class="serviceprovider">
-        <h2>Services We Provide At ThorHosting</h2>
+        <h2>Services We Provide <br> At ThorHosting</h2>
         <p>Contact Niagahoster's Customer Success Agent at any time when there is problem with your website. No need to wait long, your problem will be resolved quickly</p>
     </div>
     <div class="serviceprovider_list">
@@ -101,8 +101,8 @@
    <div class="packs">
         <div  class="pack">
             <div>
-            <h2>Starter Pack</h2>
-            <p>Suitable for beginners</p>
+            <h2>Starter <br> Pack</h2>
+            <p>Suitable for <br>beginners</p>
             </div>
             <div>
                 <ul>
@@ -145,8 +145,8 @@
         </div>
         <div  class="pack">
             <div>
-            <h2>Popular Packages</h2>
-            <p>Suitable for company, orginazation</p>
+            <h2>Popular <br> Packages</h2>
+            <p>Suitable for <br>company, orginazation</p>
             </div>
             <div>
                 <ul>
@@ -189,8 +189,8 @@
         </div>
         <div  class="pack">
             <div>
-            <h2>Buisness package</h2>
-            <p>Suitable for buisness websites</p>
+            <h2>Buisness <br> package</h2>
+            <p>Suitable for <br>buisness websites</p>
             </div>
             <div>
                 <ul>
