fixed few issues

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
    <h2>Flexible & Transparent Pricing</h2> 
    <div class="packs">
         <div  class="pack">
-            <div>
+            <div class="unselecteddiv">
             <h2>Starter <br> Pack</h2>
             <p>Suitable for <br>beginners</p>
             </div>
@@ -110,7 +110,7 @@
                         <span>
                             <i class="fa-solid fa-check"></i>
                         </span>
-                        <p>Up To 15,000 visitors/Month</p>
+                        <p>Up To 15,000 <br> visitors/Month</p>
                     </li>
                     <li>
                         <span>
@@ -144,9 +144,9 @@
             </div>
         </div>
         <div  class="pack">
-            <div>
-            <h2>Popular <br> Packages</h2>
-            <p>Suitable for <br>company, orginazation</p>
+            <div class="selecteddiv">
+                <h2>Popular <br> Packages</h2>
+                <p>Suitable for <br>company, orginazation</p>
             </div>
             <div>
                 <ul>
@@ -188,7 +188,7 @@
             </div>
         </div>
         <div  class="pack">
-            <div>
+            <div class="unselecteddiv">
             <h2>Buisness <br> package</h2>
             <p>Suitable for <br>buisness websites</p>
             </div>
